# magicflow

./: .gitignore  .gitlab-ci.yml  .gitmodules  Build-debug.bat  CMakeLists.txt  FetchLibHelper.cmake  Gen.bat  Gen.sh  LibHelper.cmake  clean.bat
3rdPart/base64/: CMakeLists.txt
3rdPart/base64/include/: base64.h
3rdPart/sdk/: CMakeLists.txt
3rdPart/sdk/include/: kafface.h  kafutils.h  sdk.h
3rdPart/sdk/src/: kafface.cpp  sdk.cpp
Megvii_magicflow/: flow1.json
Megvii_threadflow/: flow1.json  flowplugin.json
anyflow_magicflow/: flow1.json
scripts/: post-build.bat  pre-build.bat
src/: anyflow_version.cpp  anyflow_version.h  context_manager.cpp  context_manager.h  feat_node.cpp  feat_node.h  flowtype.h  megvii_version.cpp  megvii_version.h  mgf_context.cpp  mgf_context.h  mgfflow.h  spdlog_wrap.h  track_node.cpp  track_node.h
src/common/: CMGFResult.hpp  flowtype.hpp  magic_func.h  node_info.h  rootnode.cpp
src/core/: flow.h  node_info.h  thread_pool.h
src/core/base64/src/: base64.cpp
src/core/common/: CMGFResult.cpp  flowtype.hpp  rootnode.hpp
src/core/flowFactory/include/: flowFactory.h
src/core/libmagicflow/include/: magicflow.h  magicflowcfg.h
src/core/libmagicflow/src/: magicflow.cpp
src/core/megicthreadpool/src/: flow_cpuinfo.h  std_impl_thread_pool.h
src/core/node/include/: node.h
src/core/node/src/: node.cpp
src/core/node_exec/include/: node_exec.h
src/core/node_exec/src/: node_exec.cpp
src/detect_node/: detect_node.cpp  detect_node.h  mgf_context.cpp
src/ffmpeg-input/include/: ffmpeg-input-struct.h  ffmpeg-input.h
src/ffmpeg-input/src/: ffmpeg-input.cpp
src/flowFactory/include/: flowFactory.h
src/flowFactory/src/: flowFactory.cpp
src/jsoncpp/include/json/: json.h
src/libmagicflow/include/: magicflow.h
src/libmagicflow/src/: magicflow.cpp
src/magicthreadpool/include/: thread_pool.h
src/magicthreadpool/src/: thread_pool.cpp
src/megthreadpool/: flowSQ.h  thread_pool.h
src/node-template/include/: node-template.h
src/node-template/src/: node-template.cpp
src/node/include/: node.h
src/node/src/: node.cpp
src/node_exec/include/: node_exec.h
src/node_exec/src/: node_exec.cpp
src/testboostdll/: my_plugin_api.hpp  my_plugin_sum.cpp  my_plugin_sum.h
test/: IceServer.cpp  Printer.cpp  Printer.h  Printer.ice  ThreadPoolTest.cpp  boostdllTest.cpp  flowPluginTest.cpp  flowTest.cpp  nodeTest.cpp  std_voidTest.cpp  test_main.cpp
